cel/M0001-metadata-labels/policy-M0001.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: m0001.metadata.portefaix.xyz
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    # - apiGroups:   [""]
    #   apiVersions: ["v1"]
    #   operations:  ["CREATE", "UPDATE"]
    #   resources:   ["namespaces"]
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
  - expression: >
      has(object.metadata.labels) &&
      'app.kubernetes.io/name' in object.metadata.labels &&
      'app.kubernetes.io/instance' in object.metadata.labels &&
      'app.kubernetes.io/version' in object.metadata.labels &&
      'app.kubernetes.io/component' in object.metadata.labels &&
      'app.kubernetes.io/part-of' in object.metadata.labels &&
      'app.kubernetes.io/managed-by' in object.metadata.labels
    message: "Kubernetes recommanded labels is required."
